k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jordan-online-portfolio
  labels:
    app: jordan-online-portfolio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jordan-online-portfolio
  template:
    metadata:
      labels:
        app: jordan-online-portfolio
    spec:
      containers:
        - name: jordan-online-portfolio
          image: 886149544017.dkr.ecr.us-west-2.amazonaws.com/websites/jordan-online-portfolio:latest
          ports:
            - containerPort: 8000  # Change if your ASGI app uses another port
      imagePullSecrets:
        - name: regcred  # See the note below to create this secret
